--- a/index.html
+++ b/index.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
+<link rel="stylesheet" href="style.css">
     <title>Document</title>
+  
 </head>
+
 <body>
-    <P>Галина Ли</P>
+    <div class="main">
+        <div class="paragrafimg">
+            <div class="paragraf">
+                <h1><b>О курсе</b></h1>
+                <p class="par">
+                    Порой фильмы устроены сложнее четырёхтомных<br>
+                    романов. Но читать книги учат со школы, а смотреть кино<br>
+                    — нет. При этом без подготовки бывает трудно получить<br>
+                    от просмотра удовольствие.
+                </p>
+                <p class="par">
+                  На курсе из 8 занятий научимся быть осознанными<br>
+                  зрителями. Познакомимся с этапами кинопроизводства<br>
+                  и узнаем, как смотреть кино глазами сценариста,<br>
+                  режиссёра и монтажёра. Разберёмся в особенностях<br>
+                  жанров и рассмотрим важнейшие картины, от<br>
+                  «Гражданина Кейна» до «Матрицы».
+                </p>
+            </div>
+            <div class="img-big">
+                <img src="img/_1 1.png" alt="оператор">
+                <div class="podium gray"></div>
+            </div>
+        </div>
+        <div class="img-reestr">
+            <div class="img-small">
+                <img src="img/photo 1.png" alt="кинорежиссер">
+                <div class="podium2 gray"></div>
+            </div>
+            <div>
+                <h5>8 занятий</h5>
+                <p class="p">Для погружения
+                    в кинематограф</p>
+            </div>
+            <div>
+                <h5>2 часа</h5>
+                <p class="p">Длительность
+                    каждого занятия</p>
+            </div>
+            <div>
+                <h5>3 недели</h5>
+                <p class="p">Длительность
+                    курса</p>
+            </div>
+        </div>
+
+    </div>
 </body>
+
 </html>
